# lau-tensor-analysis

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: agent_field.rs  christoffel.rs  covariant.rs  lib.rs  lie.rs  metric.rs  ricci.rs  riemann.rs  tensor.rs
tests/: integration.rs
