[package]
name = "lau-tensor-analysis"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-tensor-analysis"
description = "Tensor analysis on manifolds — tensors, metric tensors, Christoffel symbols, covariant derivatives, Riemann curvature, Ricci tensor, scalar curvature, and Lie derivatives for general relativity and continuum mechanics."

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"
